<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    xmlns:android="http://schemas.android.com/apk/res/android" >

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:src="@drawable/logo">
    </ImageView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.01"
        android:layout_marginTop="25dp"
        android:background="@color/colorTextPrimary">

    </TextView>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/text_view_speciality"
        android:textSize="20sp"
        android:gravity="center_vertical">

    </TextView>

    <AutoCompleteTextView
        android:completionThreshold="0"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:hint="@string/speciality_hint"
        android:textSize="20sp"
        android:id="@+id/speciality">

    </AutoCompleteTextView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/text_view_doctor"
        android:textSize="20sp"
        android:gravity="center_vertical">

    </TextView>

    <AutoCompleteTextView
        android:completionThreshold="0"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:hint="@string/doctor_hint"
        android:textSize="20sp"
        android:id="@+id/doctor">

    </AutoCompleteTextView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/text_view_date"
        android:textSize="20sp"
        android:gravity="center_vertical">

    </TextView>

    <AutoCompleteTextView
        android:completionThreshold="0"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:hint="@string/date_hint"
        android:textSize="20sp"
        android:id="@+id/date">

    </AutoCompleteTextView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/text_view_hospital"
        android:textSize="20sp"
        android:gravity="center_vertical">

    </TextView>

    <AutoCompleteTextView
        android:completionThreshold="0"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:hint="@string/hospital_hint"
        android:textSize="20sp"
        android:id="@+id/hospital"
        android:layout_marginBottom="20dp">

    </AutoCompleteTextView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/btn_reset"
            android:textSize="24sp"
            android:textColor="@color/colorTextIcons"
            android:background="@drawable/my_button"
            android:layout_marginRight="10dp"
            android:onClick="reset">

        </Button>

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/btn_search"
            android:textSize="24sp"
            android:textColor="@color/colorTextIcons"
            android:background="@drawable/my_button"
            android:layout_marginLeft="10dp"
            android:onClick="search">

        </Button>

    </LinearLayout>
</LinearLayout>